--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -1,76 +1,113 @@
-welcome_message= Willkommen im Wohnungseigentümerverwaltungssystem
-login_button= Anmelden
-register_button= Registrieren
-login_title= Anmelden
-email_placeholder= E-Mail-Adresse
-password_placeholder= Passwort
-role_label= Wählen Sie eine Rolle
-tenant= Mieter
-manager= Manager
-admin= Administrator
+home_welcome_message= Willkommen im Wohnungseigentï¿½merverwaltungssystem
+home_login_button= Anmelden
+home_register_button= Registrieren
+login_title=Anmeldung
+login_email_placeholder=E-Mail-Adresse
+login_password_placeholder=Passwort
+login_role_label=Rolle auswï¿½hlen
+login_button=Einloggen
+login_user=Mieter
+login_manager=Manager
+login_admin=Administrator
+login_error_message=Ungï¿½ltige Anmeldedaten
+activating_account=Konto wird aktiviert...
+please_wait=Bitte warten Sie, Ihre Anfrage wird bearbeitet.
+success_message=Ihr Konto wurde erfolgreich aktiviert!
+token_missing=Aktivierungstoken fehlt.
+error_email_in_use=E-Mail-Adresse wird bereits verwendet.
+error_phone_in_use=Telefonnummer wird bereits verwendet.
+error_pesel_in_use=Diese PESEL-Nummer wird bereits verwendet.
+error_pesel_invalid=Ungï¿½ltige PESEL-Nummer.
+email_activation_subject=Kontoaktivierung
+email_activation_body=Vielen Dank fï¿½r Ihre Registrierung. Klicken Sie auf den folgenden Link, um Ihr Konto zu aktivieren:
+error_invalid_token=Ungï¿½ltiger Aktivierungstoken.
+error_token_used=Dieser Token wurde bereits verwendet.
+error_account_already_activated=Das Konto wurde bereits aktiviert.
+error_credentials_invalid=Ungï¿½ltige Anmeldedaten.
+error_role_invalid=Ungï¿½ltige Benutzerrolle.
+error_recaptcha_invalid=Ungï¿½ltiges reCAPTCHA-Token. Bitte versuche es erneut.
+login_admin_success=Administrator-Anmeldung erfolgreich.
+login_user_success=Benutzeranmeldung erfolgreich.
+registration_success=Registrierung erfolgreich. ï¿½berprï¿½fen Sie Ihre E-Mails, um Ihr Konto zu aktivieren.
+account_activated=Ihr Konto wurde erfolgreich aktiviert.
+
 register_title=Registrierung
-firstName_placeholder=Vorname
-lastName_placeholder=Nachname
-pesel_placeholder=PESEL
-phoneNumber_placeholder=Telefonnummer
+registerFirstName_placeholder=Vorname
+registerLastName_placeholder=Nachname
+registerPesel_placeholder=PESEL
+registerPhoneNumber_placeholder=Telefonnummer
+registerEmail_placeholder=E-Mail-Adresse
+registerPassword_placeholder=Passwort
 submit_button=Registrieren
-recaptcha_label=Bitte bestätigen Sie, dass Sie kein Roboter sind.
-error_pesel=PESEL muss 11 Ziffern und eine korrekte Prüfziffer haben.
-error_phone=Die Telefonnummer muss genau 9 Ziffern haben.
-error_password=Das Passwort muss mindestens 12 Zeichen lang sein, einschließlich eines Großbuchstabens, eines Kleinbuchstabens, einer Zahl und eines Sonderzeichens.
+recaptcha_label=Bitte bestï¿½tigen Sie, dass Sie kein Roboter sind.
+error_pesel=PESEL muss 11 Ziffern enthalten und eine gï¿½ltige Prï¿½fsumme haben.
+error_phone=Die Telefonnummer muss genau 9 Ziffern enthalten.
+error_password=Das Passwort muss mindestens 12 Zeichen lang sein und Groï¿½buchstaben, Kleinbuchstaben, Ziffern und Sonderzeichen enthalten.
 error_required=Dieses Feld ist erforderlich.
-error_invalidData=Ungültige Daten. Bitte überprüfen Sie das Formular und versuchen Sie es erneut.
-success_registration=Registrierung erfolgreich! Sie werden auf die Startseite weitergeleitet.
-error_generic = Es ist ein Fehler aufgetreten. Bitte versuche es später erneut.
-admin_dashboard=Administrator-Dashboard
-users=Benutzer
-buildings=Gebäude
-apartments=Wohnungen
-readings=Messwerte
-logout=Abmelden
-confirm_delete=Möchten Sie dieses Gebäude wirklich löschen?
-delete_success=Das Gebäude wurde gelöscht.
-delete_error=Löschfehler
-delete_exception=Beim Löschen des Gebäudes ist ein Fehler aufgetreten.
-buildings_list_title=Gebäudeliste
-add_building=Gebäude hinzufügen
-no_buildings=Keine Gebäude zum Anzeigen.
+error_invalidData=Ungï¿½ltige Daten. Bitte ï¿½berprï¿½fen Sie das Formular und versuchen Sie es erneut.
+success_registration=Registrierung erfolgreich! Sie werden zur Startseite weitergeleitet.
+error_generic=Ein Fehler ist aufgetreten. Bitte versuchen Sie es spï¿½ter erneut.
+admin_dashboard=Admin-Dashboard
+admin_users=Benutzer
+admin_buildings=GebÃ¤ude
+admin_apartments=Wohnungen
+admin_readings=Ablesungen
+admin_logout=Abmelden
+
+buildings_list_title=GebÃ¤udeliste
+buildings_add=GebÃ¤ude hinzufÃ¼gen
+buildings_no_data=Keine GebÃ¤ude zum Anzeigen vorhanden.
+buildings_address=Adresse
+buildings_floor_count=Anzahl der Stockwerke
+buildings_actions=Aktionen
+buildings_no_address=Keine Adresse
+buildings_show=Anzeigen
+buildings_edit=Bearbeiten
+buildings_delete=LÃ¶schen
+error_building_not_found=GebÃ¤ude wurde nicht gefunden
+
+confirm_delete=Mï¿½chten Sie dieses Gebï¿½ude wirklich lï¿½schen?
+delete_success=Das Gebï¿½ude wurde gelï¿½scht.
+delete_error=Lï¿½schfehler
+delete_exception=Beim Lï¿½schen des Gebï¿½udes ist ein Fehler aufgetreten.
+add_building=Gebï¿½ude hinzufï¿½gen
+no_buildings=Keine Gebï¿½ude zum Anzeigen.
 address=Adresse
 floor_count=Anzahl der Etagen
 actions=Aktionen
 no_address=Keine Adresse
 show=Anzeigen
 edit=Bearbeiten
-delete=Löschen
+delete=Lï¿½schen
 noData=Keine Daten zum Anzeigen.
-buildingDetailsTitle=Gebäudedetails
+buildingDetailsTitle=Gebï¿½udedetails
 info=Informationen
 numberOfFloors=Anzahl der Stockwerke
 noApartments=Keine zugewiesenen Wohnungen
 managers=Verwalter
 noManagers=Keine zugewiesenen Verwalter
-back=Zurück
-addBuilding=Gebäude hinzufügen
-buildingListTitle=Gebäudeliste
-noBuildings=Keine Gebäude zum Anzeigen.
+back=Zurï¿½ck
+addBuilding=Gebï¿½ude hinzufï¿½gen
+buildingListTitle=Gebï¿½udeliste
+noBuildings=Keine Gebï¿½ude zum Anzeigen.
 id=ID
-editBuilding=Gebäude bearbeiten
-street=Straße
+editBuilding=Gebï¿½ude bearbeiten
+street=Straï¿½e
 number=Nummer
 postalCode=Postleitzahl
 city=Stadt
-rates=Sätze
+rates=Sï¿½tze
 electricityRate=Strompreis (PLN/kWh)
-coldWaterRate=Kaltwasserpreis (PLN/m³)
-hotWaterRate=Warmwasserpreis (PLN/m³)
-heatingRate=Heizkosten (PLN/m²)
-rentRatePerM2=Miete pro m² (PLN)
-otherChargesPerM2=Sonstige Kosten pro m² (PLN)
-flatElectricityRate=Pauschale für Strom (PLN)
-flatColdWaterRate=Pauschale für Kaltwasser (PLN)
-flatHotWaterRate=Pauschale für Warmwasser (PLN)
-flatHeatingRate=Pauschale für Heizung (PLN)
+coldWaterRate=Kaltwasserpreis (PLN/mï¿½)
+hotWaterRate=Warmwasserpreis (PLN/mï¿½)
+heatingRate=Heizkosten (PLN/mï¿½)
+rentRatePerM2=Miete pro mï¿½ (PLN)
+otherChargesPerM2=Sonstige Kosten pro mï¿½ (PLN)
+flatElectricityRate=Pauschale fï¿½r Strom (PLN)
+flatColdWaterRate=Pauschale fï¿½r Kaltwasser (PLN)
+flatHotWaterRate=Pauschale fï¿½r Warmwasser (PLN)
+flatHeatingRate=Pauschale fï¿½r Heizung (PLN)
 save=Speichern
 cancel=Abbrechen
-formError=Bitte füllen Sie alle Felder aus und stellen Sie sicher, dass die Raten größer als null sind.gfh
-buildingInfo=Gebäudeinformationen
+formError=Bitte fï¿½llen Sie alle Felder aus und stellen Sie sicher, dass die Raten grï¿½ï¿½er als null sind.gfh
+buildingInfo=Gebï¿½udeinformationen
