--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -1,38 +1,76 @@
-welcome_message= Welcome to the Housing Management System
-login_button= Log In
-register_button= Register
-login_title= Login
-email_placeholder= Email Address
-password_placeholder= Password
-role_label= Select Role
-tenant= Tenant
-manager= Manager
-admin= Administrator
+home_welcome_message= Welcome to the Housing Management System
+home_login_button= Log In
+home_register_button= Register
+login_title=Login
+login_email_placeholder=Email address
+login_password_placeholder=Password
+login_role_label=Select role
+login_button=Log in
+login_user=Tenant
+login_manager=Manager
+login_admin=Administrator
+login_error_message=Invalid login credentials
+activating_account=Activating account...
+please_wait=Please wait, your request is being processed.
+success_message=Your account has been successfully activated!
+token_missing=Activation token is missing.
+error_email_in_use=Email address is already in use.
+error_phone_in_use=Phone number is already in use.
+error_pesel_in_use=This PESEL number is already in use.
+error_pesel_invalid=Invalid PESEL number.
+email_activation_subject=Account Activation
+email_activation_body=Thank you for registering. Click the link below to activate your account:
+error_invalid_token=Invalid activation token.
+error_token_used=This token has already been used.
+error_account_already_activated=The account has already been activated.
+error_credentials_invalid=Invalid login credentials.
+error_role_invalid=Invalid user role.
+error_recaptcha_invalid=Invalid reCAPTCHA token. Please try again.
+login_admin_success=Admin login successful.
+login_user_success=User login successful.
+registration_success=Registration successful. Check your email to activate your account.
+account_activated=Your account has been successfully activated.
 register_title=Registration
-firstName_placeholder=First Name
-lastName_placeholder=Last Name
-pesel_placeholder=PESEL
-phoneNumber_placeholder=Phone Number
+registerFirstName_placeholder=First Name
+registerLastName_placeholder=Last Name
+registerPesel_placeholder=PESEL
+registerPhoneNumber_placeholder=Phone Number
+registerEmail_placeholder=Email Address
+registerPassword_placeholder=Password
 submit_button=Register
-recaptcha_label=Please confirm that you are not a robot.
-error_pesel=PESEL must have 11 digits and a correct control sum.
+recaptcha_label=Please confirm you are not a robot.
+error_pesel=PESEL must contain 11 digits and have a valid checksum.
 error_phone=Phone number must have exactly 9 digits.
-error_password=Password must be at least 12 characters long, with an uppercase letter, a lowercase letter, a digit, and a special character.
+error_password=Password must be at least 12 characters long and include uppercase, lowercase, digit, and special character.
 error_required=This field is required.
 error_invalidData=Invalid data. Please check the form and try again.
-success_registration=Registration successful! You will be redirected to the homepage.
-error_generic = An error occurred. Please try again later.
+success_registration=Registration successful! You will be redirected to the home page.
+error_generic=An error occurred. Please try again later.
 admin_dashboard=Admin Dashboard
-users=Users
-buildings=Buildings
-apartments=Apartments
-readings=Readings
-logout=Logout
+admin_users=Users
+admin_buildings=Buildings
+admin_apartments=Apartments
+admin_readings=Readings
+admin_logout=Log out
+
+buildings_list_title=Building List
+buildings_add=Add Building
+buildings_no_data=No buildings to display.
+buildings_address=Address
+buildings_floor_count=Number of Floors
+buildings_actions=Actions
+buildings_no_address=No address
+buildings_show=Show
+buildings_edit=Edit
+buildings_delete=Delete
+error_building_not_found=Building not found
+
+
+
 confirm_delete=Are you sure you want to delete this building?
 delete_success=The building has been deleted.
 delete_error=Delete error
 delete_exception=An error occurred while deleting the building.
-buildings_list_title=List of buildings
 add_building=Add building
 no_buildings=No buildings to display.
 address=Address
@@ -61,11 +99,11 @@ number=Number
 postalCode=Postal Code
 city=City
 electricityRate=Electricity Rate (PLN/kWh)
-coldWaterRate=Cold Water Rate (PLN/m³)
-hotWaterRate=Hot Water Rate (PLN/m³)
-heatingRate=Heating Rate (PLN/m²)
-rentRatePerM2=Rent per m² (PLN)
-otherChargesPerM2=Other Charges per m² (PLN)
+coldWaterRate=Cold Water Rate (PLN/mï¿½)
+hotWaterRate=Hot Water Rate (PLN/mï¿½)
+heatingRate=Heating Rate (PLN/mï¿½)
+rentRatePerM2=Rent per mï¿½ (PLN)
+otherChargesPerM2=Other Charges per mï¿½ (PLN)
 flatElectricityRate=Flat Electricity Rate (PLN)
 flatColdWaterRate=Flat Cold Water Rate (PLN)
 flatHotWaterRate=Flat Hot Water Rate (PLN)
