--- a/src/main/resources/i18n/messages_pl.properties
+++ b/src/main/resources/i18n/messages_pl.properties
@@ -9,27 +9,7 @@ login_button=Zaloguj się
 login_user=Najemca
 login_manager=Menadżer
 login_admin=Administrator
-login_error_message=Nieprawidłowe dane logowania
-error_email_in_use=Adres e-mail jest już używany.
-error_phone_in_use=Numer telefonu jest już używany.
-error_pesel_in_use=Ten numer PESEL jest już używany.
-error_pesel_invalid=Nieprawidłowy numer PESEL.
-email_activation_subject=Aktywacja konta
-email_activation_body=Dziękujemy za rejestrację. Kliknij poniższy link, aby aktywować swoje konto:
-error_invalid_token=Nieprawidłowy token aktywacyjny.
-error_token_used=Ten token został już użyty.
-error_account_already_activated=Konto zostało już aktywowane.
-error_credentials_invalid=Nieprawidłowe dane logowania.
-error_role_invalid=Nieprawidłowa rola użytkownika.
-error_recaptcha_invalid=Nieprawidłowy token reCAPTCHA. Proszę spróbuj ponownie.
-login_admin_success=Logowanie administratora zakończone sukcesem.
-login_user_success=Logowanie użytkownika zakończone sukcesem.
-registration_success=Rejestracja zakończona pomyślnie. Sprawdź e-mail, aby aktywować konto.
-account_activated=Twoje konto zostało aktywowane pomyślnie.
-activating_account=Aktywacja konta...
-please_wait=Proszę czekać, trwa przetwarzanie żądania.
-success_message=Konto zostało pomyślnie aktywowane!
-token_missing=Brak tokena aktywacyjnego.
+login_error_network=Błąd sieci
 register_title=Rejestracja
 registerFirstName_placeholder=Imię
 registerLastName_placeholder=Nazwisko
@@ -44,14 +24,79 @@ error_phone=Numer telefonu musi mieć dokładnie 9 cyfr.
 error_password=Hasło musi mieć co najmniej 12 znaków, w tym dużą literę, małą literę, cyfrę i znak specjalny.
 error_required=To pole jest wymagane.
 error_invalidData=Niepoprawne dane. Proszę sprawdzić formularz i spróbować ponownie.
-success_registration=Rejestracja zakończona sukcesem! Zostaniesz przekierowany na stronę główną.
 error_generic=Wystąpił błąd. Spróbuj ponownie później.
+session_expired=Twoja sesja wygasła. Zaloguj się ponownie.
+load_error=Nie udało się załadować danych.
+load_exception=Wystąpił błąd podczas pobierania danych.
+delete_error=Błąd usuwania
+delete_exception=Wystąpił błąd podczas usuwania.
+save_error=Błąd zapisu
+save_exception=Wystąpił błąd podczas zapisywania.
+create_error=Błąd dodawania
+create_exception=Błąd podczas dodawania.
+confirm_delete=Czy na pewno chcesz usunąć ten element?
+no_data=Brak danych do wyświetlenia.
+activating_account=Aktywacja konta...
+please_wait=Proszę czekać, trwa przetwarzanie żądania.
+token_missing=Brak tokena aktywacyjnego.
+error_activation_failed=Wystąpił problem z połączeniem lub aktywacją konta.
+email_activation_subject=Aktywacja konta
+email_activation_body=Aby aktywować konto, kliknij poniższy link:
+error_recaptcha_invalid=Błędna weryfikacja reCAPTCHA.
+registration_success=Rejestracja przebiegła pomyślnie. Sprawdź e-mail w celu aktywacji konta.
+account_activated=Konto zostało aktywowane pomyślnie.
+error_email_in_use=Ten adres e-mail jest już używany.
+error_phone_in_use=Ten numer telefonu jest już używany.
+error_pesel_in_use=Ten numer PESEL jest już zarejestrowany.
+error_pesel_invalid=Podany numer PESEL jest nieprawidłowy.
+error_invalid_token=Nieprawidłowy token aktywacyjny.
+error_token_used=Token aktywacyjny został już użyty.
+error_account_already_activated=To konto zostało już aktywowane.
+error_credentials_invalid=Nieprawidłowa nazwa użytkownika lub hasło.
+error_role_invalid=Nieprawidłowa rola użytkownika.
 admin_dashboard=Panel administratora
 admin_users=Użytkownicy
 admin_buildings=Budynki
 admin_apartments=Apartamenty
 admin_readings=Odczyty
 admin_logout=Wyloguj się
+building_created_success=Budynek został pomyślnie utworzony.
+building_updated_success=Budynek został pomyślnie zaktualizowany.
+building_deleted_success=Budynek został pomyślnie usunięty.
+error_building_address_already_exists=Podany adres budynku już istnieje.
+error_building_not_found=Nie znaleziono budynku o podanym identyfikatorze.
+addBuilding=Dodaj budynek
+editBuilding=Edytuj budynek
+cancel=Anuluj
+save=Zapisz
+buildingformError=Uzupełnij wszystkie pola poprawnie. Wszystkie stawki muszą być większe od 0, a adres nie może być pusty.
+address=Adres
+street=Ulica
+buildingnumber=Numer
+postalCode=Kod pocztowy
+city=Miasto
+buildingInfo=Informacje o budynku
+numberOfFloors=Liczba pięter
+rates=Stawki i opłaty
+electricityRate=Stawka za prąd (zł/kWh)
+coldWaterRate=Stawka za zimną wodę (zł/m³)
+hotWaterRate=Stawka za ciepłą wodę (zł/m³)
+heatingRate=Stawka za ogrzewanie (zł/GJ)
+rentRatePerM2=Czynsz (zł/m²)
+otherChargesPerM2=Inne opłaty (zł/m²)
+flatElectricityRate=Ryczałt za prąd (zł)
+flatColdWaterRate=Ryczałt za zimną wodę (zł)
+flatHotWaterRate=Ryczałt za ciepłą wodę (zł)
+flatHeatingRate=Ryczałt za ogrzewanie (zł)
+buildingDetailsTitle=Szczegóły budynku
+info=Informacje
+apartments=Apartamenty
+buildingapartmentNumber=Numer
+floor=Piętro
+noApartments=Brak przypisanych apartamentów
+managers=Zarządcy
+noManagers=Brak przypisanych zarządców
+back=Powrót
 buildings_list_title=Lista budynków
 buildings_add=Dodaj budynek
 buildings_no_data=Brak budynków do wyświetlenia.
@@ -62,54 +107,32 @@ buildings_no_address=Brak adresu
 buildings_show=Pokaż
 buildings_edit=Edytuj
 buildings_delete=Usuń
-error_building_not_found=Budynek nie został znaleziony
-
-
-
-
-
-confirm_delete=Czy na pewno chcesz usunąć ten budynek?
-delete_success=Budynek został usunięty.
-delete_error=Błąd usuwania
-delete_exception=Wystąpił błąd podczas usuwania budynku.
-add_building=Dodaj budynek
-no_buildings=Brak budynków do wyświetlenia.
-address=Adres
-floor_count=Liczba pięter
-actions=Akcje
-no_address=Brak adresu
-show=Pokaż
-edit=Edytuj
-delete=Usuń
-noData=Brak danych do wyświetlenia.
-buildingDetailsTitle=Szczegóły budynku
-info=Informacje
-numberOfFloors=Liczba pięter
-rates=Stawki
-noApartments=Brak przypisanych apartamentów
-managers=Zarządcy
-noManagers=Brak przypisanych zarządców
-back=Powrót
-addBuilding=Dodaj budynek
-buildingListTitle=Lista budynków
-noBuildings=Brak budynków do wyświetlenia.
-id=ID
-editBuilding=Edytuj budynek
-street=Ulica
-number=Numer
-postalCode=Kod pocztowy
-city=Miasto
-electricityRate=Stawka za prąd (PLN/kWh)
-coldWaterRate=Stawka za zimną wodę (PLN/m³)
-hotWaterRate=Stawka za ciepłą wodę (PLN/m³)
-heatingRate=Stawka za ogrzewanie (PLN/m²)
-rentRatePerM2=Czynsz za m² (PLN)
-otherChargesPerM2=Inne opłaty za m² (PLN)
-flatElectricityRate=Ryczałt za prąd (PLN)
-flatColdWaterRate=Ryczałt za zimną wodę (PLN)
-flatHotWaterRate=Ryczałt za ciepłą wodę (PLN)
-flatHeatingRate=Ryczałt za ogrzewanie (PLN)
-save=Zapisz
-cancel=Anuluj
-formError=Uzupełnij wszystkie pola i upewnij się, że stawki są większe od zera.
-buildingInfo=Informacje o budynku
+apartment_created_success=Mieszkanie zostało pomyślnie utworzone.
+apartment_updated_success=Mieszkanie zostało pomyślnie zaktualizowane.
+apartment_deleted_success=Mieszkanie zostało pomyślnie usunięte.
+error_apartment_not_found=Nie znaleziono mieszkania o podanym identyfikatorze.
+error_apartment_number_exists=Mieszkanie o podanym numerze już istnieje w tym budynku.
+error_apartment_invalid_floor=Piętro mieszkania przekracza liczbę pięter budynku.
+no_buildings_available=Brak dostępnych budynków. Dodaj budynek przed dodaniem mieszkania.
+addApartment=Dodaj mieszkanie
+editApartment=Edytuj mieszkanie
+formError=Uzupełnij wszystkie pola poprawnie. Powierzchnia musi być większa od 0, numer mieszkania nie może być pusty, wybierz budynek.
+apartmentNumber=Numer mieszkania
+area=Powierzchnia (m²)
+buildingId=Budynek
+selectBuilding=-- wybierz budynek --
+apartmentDetailsTitle=Szczegóły mieszkania
+number=Numer mieszkania
+buildingAddress=Adres budynku
+tenant=Najemca
+noTenant=Brak przypisanego najemcy
+apartments_list_title=Lista mieszkań
+apartments_add=Dodaj mieszkanie
+apartments_no_data=Brak mieszkań do wyświetlenia.
+apartments_address=Adres
+apartments_number=Numer mieszkania
+apartments_actions=Akcje
+apartments_no_address=Brak adresu
+apartments_show=Pokaż
+apartments_edit=Edytuj
+apartments_delete=Usuń
