--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -1,137 +1,313 @@
-home_welcome_message=Willkommen im Verwaltungssystem für Wohnungsbaugenossenschaften
+home_welcome_message=Willkommen im Wohnungsgenossenschaftsverwaltungssystem
 home_login_button=Anmelden
 home_register_button=Registrieren
+
+activate_activating_account=Konto wird aktiviert...
+activate_please_wait=Bitte warten, Ihre Anfrage wird bearbeitet.
+activate_token_missing=Aktivierungstoken fehlt.
+activate_error_activation_failed=Es ist ein Problem bei der Verbindung oder Aktivierung des Kontos aufgetreten.
+
 login_title=Anmeldung
 login_email_placeholder=E-Mail-Adresse
 login_password_placeholder=Passwort
 login_role_label=Rolle auswählen
 login_button=Anmelden
 login_user=Mieter
-login_manager=Verwalter
+login_manager=Manager
 login_admin=Administrator
-login_error_network=Netzwerkfehler
+login_error_network=Netzwerkfehler:
+
 register_title=Registrierung
-registerFirstName_placeholder=Vorname
-registerLastName_placeholder=Nachname
-registerPesel_placeholder=PESEL
-registerPhoneNumber_placeholder=Telefonnummer
-registerEmail_placeholder=E-Mail-Adresse
-registerPassword_placeholder=Passwort
-submit_button=Registrieren
-recaptcha_label=Bitte bestätigen Sie, dass Sie kein Roboter sind.
-error_pesel=Die PESEL-Nummer muss 11 Ziffern mit gültiger Prüfziffer enthalten.
-error_phone=Telefonnummer muss genau 9 Ziffern enthalten.
-error_password=Passwort muss mindestens 12 Zeichen lang sein und Großbuchstaben, Kleinbuchstaben, Zahl und Sonderzeichen enthalten.
-error_required=Dieses Feld ist erforderlich.
-error_invalidData=Ungültige Daten. Bitte Formular überprüfen und erneut versuchen.
-error_generic=Ein Fehler ist aufgetreten. Bitte später erneut versuchen.
-session_expired=Ihre Sitzung ist abgelaufen. Bitte erneut anmelden.
-load_error=Daten konnten nicht geladen werden.
-load_exception=Fehler beim Laden der Daten.
-delete_error=Fehler beim Löschen
-delete_exception=Fehler beim Löschen aufgetreten.
-save_error=Fehler beim Speichern
-save_exception=Fehler beim Speichern aufgetreten.
-create_error=Fehler beim Erstellen
-create_exception=Fehler beim Erstellen aufgetreten.
-confirm_delete=Möchten Sie dieses Element wirklich löschen?
-no_data=Keine Daten verfügbar.
-activating_account=Konto wird aktiviert...
-please_wait=Bitte warten, Anfrage wird verarbeitet.
-token_missing=Aktivierungstoken fehlt.
-error_activation_failed=Problem mit Verbindung oder Aktivierung des Kontos.
-email_activation_subject=Kontoaktivierung
-email_activation_body=Zur Aktivierung Ihres Kontos klicken Sie bitte auf den folgenden Link:
-error_recaptcha_invalid=Ungültige reCAPTCHA-Verifizierung.
-registration_success=Registrierung erfolgreich. Bitte prüfen Sie Ihre E-Mails zur Kontoaktivierung.
-account_activated=Konto erfolgreich aktiviert.
-error_email_in_use=Diese E-Mail-Adresse wird bereits verwendet.
-error_phone_in_use=Diese Telefonnummer wird bereits verwendet.
-error_pesel_in_use=Diese PESEL-Nummer ist bereits registriert.
-error_pesel_invalid=Die angegebene PESEL-Nummer ist ungültig.
-error_invalid_token=Ungültiger Aktivierungstoken.
-error_token_used=Aktivierungstoken wurde bereits verwendet.
-error_account_already_activated=Dieses Konto wurde bereits aktiviert.
-error_credentials_invalid=Ungültiger Benutzername oder Passwort.
+register_firstName_placeholder=Vorname
+register_lastName_placeholder=Nachname
+register_pesel_placeholder=PESEL
+register_phoneNumber_placeholder=Telefonnummer
+register_email_placeholder=E-Mail-Adresse
+register_password_placeholder=Passwort
+register_submit_button=Registrieren
+register_recaptcha_label=Bitte bestätigen Sie, dass Sie kein Roboter sind.
+register_error_pesel=Die PESEL muss 11 Ziffern haben und eine gültige Prüfsumme enthalten.
+register_error_phone=Die Telefonnummer muss genau 9 Ziffern haben.
+register_error_password=Das Passwort muss mindestens 12 Zeichen lang sein, einen Großbuchstaben, einen Kleinbuchstaben, eine Ziffer und ein Sonderzeichen enthalten.
+register_error_required=Dieses Feld ist erforderlich.
+register_error_invalidData=Ungültige Daten. Bitte überprüfen Sie das Formular und versuchen Sie es erneut.
+register_error_generic=Ein Fehler ist aufgetreten. Bitte versuchen Sie es später erneut.
+
+error_recaptcha_invalid=Ungültige reCAPTCHA-Überprüfung.
+registration_success=Registrierung erfolgreich abgeschlossen.
+account_activated=Das Konto wurde aktiviert.
+error_email_in_use=Die E-Mail-Adresse wird bereits verwendet.
+error_phone_in_use=Die Telefonnummer wird bereits verwendet.
+error_pesel_in_use=Die PESEL wird bereits verwendet.
+error_pesel_invalid=Ungültige PESEL-Nummer.
+error_invalid_token=Ungültiges Aktivierungstoken.
+error_token_used=Das Aktivierungstoken wurde bereits verwendet.
+error_account_already_activated=Das Konto wurde bereits aktiviert.
+error_credentials_invalid=Ungültige Anmeldedaten.
 error_role_invalid=Ungültige Benutzerrolle.
-admin_dashboard=Admin-Panel
+error_user_disabled=Das Benutzerkonto ist deaktiviert.
+email_activation_subject=Kontoaktivierung
+email_activation_body=Hallo,\nKlicken Sie auf den untenstehenden Link, um Ihr Konto zu aktivieren:
+
+admin_dashboard=Administrator-Panel
 admin_users=Benutzer
 admin_buildings=Gebäude
 admin_apartments=Wohnungen
-admin_readings=Zählerstände
+admin_readings=Ablesungen
 admin_logout=Abmelden
-building_created_success=Gebäude erfolgreich erstellt.
-building_updated_success=Gebäude erfolgreich aktualisiert.
-building_deleted_success=Gebäude erfolgreich gelöscht.
-error_building_address_already_exists=Die angegebene Gebäudeadresse existiert bereits.
-error_building_not_found=Gebäude mit der angegebenen ID nicht gefunden.
-addBuilding=Gebäude hinzufügen
-editBuilding=Gebäude bearbeiten
-cancel=Abbrechen
-save=Speichern
-buildingformError=Alle Felder korrekt ausfüllen. Alle Tarife müssen größer als 0 sein, Adresse darf nicht leer sein.
-address=Adresse
-street=Straße
-buildingnumber=Nummer
-postalCode=Postleitzahl
-city=Stadt
-buildingInfo=Gebäudeinformationen
-numberOfFloors=Anzahl der Etagen
-rates=Tarife und Gebühren
-electricityRate=Stromtarif (PLN/kWh)
-coldWaterRate=Kaltwasser (PLN/m³)
-hotWaterRate=Warmwasser (PLN/m³)
-heatingRate=Heiztarif (PLN/GJ)
-rentRatePerM2=Miete (PLN/m²)
-otherChargesPerM2=Weitere Gebühren (PLN/m²)
-flatElectricityRate=Pauschale Strom (PLN)
-flatColdWaterRate=Pauschale Kaltwasser (PLN)
-flatHotWaterRate=Pauschale Warmwasser (PLN)
-flatHeatingRate=Pauschale Heizung (PLN)
-buildingDetailsTitle=Gebäudedetails
-info=Informationen
-apartments=Wohnungen
-buildingapartmentNumber=Nummer
-floor=Etage
-noApartments=Keine Wohnungen zugewiesen
-managers=Verwalter
-noManagers=Keine Verwalter zugewiesen
-back=Zurück
-buildings_list_title=Gebäudeliste
-buildings_add=Gebäude hinzufügen
-buildings_no_data=Keine Gebäude zur Anzeige vorhanden.
-buildings_address=Adresse
-buildings_floor_count=Etagenanzahl
-buildings_actions=Aktionen
-buildings_no_address=Keine Adresse
-buildings_show=Anzeigen
-buildings_edit=Bearbeiten
-buildings_delete=Löschen
-apartment_created_success=Wohnung erfolgreich erstellt.
-apartment_updated_success=Wohnung erfolgreich aktualisiert.
-apartment_deleted_success=Wohnung erfolgreich gelöscht.
-error_apartment_not_found=Wohnung mit angegebener ID nicht gefunden.
-error_apartment_number_exists=Eine Wohnung mit dieser Nummer existiert bereits im Gebäude.
-error_apartment_invalid_floor=Wohnungsetage überschreitet Anzahl der Etagen im Gebäude.
-addApartment=Wohnung hinzufügen
-editApartment=Wohnung bearbeiten
-formError=Alle Felder korrekt ausfüllen. Fläche muss größer als 0 sein, Wohnungsnummer darf nicht leer sein, Gebäude auswählen.
+
+addBuildingForm_addBuilding=Gebäude hinzufügen
+addBuildingForm_cancel=Abbrechen
+addBuildingForm_formError=Füllen Sie alle Felder korrekt aus. Alle Tarife müssen größer als 0 sein, und die Adresse darf nicht leer sein.
+addBuildingForm_address=Adresse
+addBuildingForm_street=Straße
+addBuildingForm_number=Nummer
+addBuildingForm_postalCode=Postleitzahl
+addBuildingForm_city=Stadt
+addBuildingForm_buildingInfo=Gebäudeinformationen
+addBuildingForm_numberOfFloors=Anzahl der Stockwerke
+addBuildingForm_rates=Tarife und Gebühren
+addBuildingForm_electricityRate=Stromtarif (EUR/kWh)
+addBuildingForm_coldWaterRate=Kaltwassertarif (EUR/m³)
+addBuildingForm_hotWaterRate=Warmwassertarif (EUR/m³)
+addBuildingForm_heatingRate=Heizungstarif (EUR/GJ)
+addBuildingForm_rentRatePerM2=Miete (EUR/m²)
+addBuildingForm_otherChargesPerM2=Sonstige Gebühren (EUR/m²)
+addBuildingForm_flatElectricityRate=Pauschale Strom (EUR)
+addBuildingForm_flatColdWaterRate=Pauschale Kaltwasser (EUR)
+addBuildingForm_flatHotWaterRate=Pauschale Warmwasser (EUR)
+addBuildingForm_flatHeatingRate=Pauschale Heizung (EUR)
+
+buildingDetails_buildingDetailsTitle=Gebäudedetails
+buildingDetails_noData=Keine Daten zum Anzeigen verfügbar.
+buildingDetails_address=Adresse
+buildingDetails_info=Informationen
+buildingDetails_numberOfFloors=Anzahl der Stockwerke
+buildingDetails_rates=Tarife
+buildingDetails_electricityRate=Stromtarif
+buildingDetails_coldWaterRate=Kaltwassertarif
+buildingDetails_hotWaterRate=Warmwassertarif
+buildingDetails_heatingRate=Heizungstarif
+buildingDetails_rentRatePerM2=Miete
+buildingDetails_otherChargesPerM2=Sonstige Gebühren
+buildingDetails_flatElectricityRate=Pauschale Strom
+buildingDetails_flatColdWaterRate=Pauschale Kaltwasser
+buildingDetails_flatHotWaterRate=Pauschale Warmwasser
+buildingDetails_flatHeatingRate=Pauschale Heizung
+buildingDetails_apartments=Wohnungen
+buildingDetails_apartmentNumber=Nummer
+buildingDetails_floor=Stockwerk
+buildingDetails_noApartments=Keine zugewiesenen Wohnungen
+buildingDetails_managers=Manager
+buildingDetails_noManagers=Keine zugewiesenen Manager
+buildingDetails_back=Zurück
+
+user_dashboard=Mieter-Dashboard
+user_readings=Ablesungen
+user_invoices=Rechnungen
+user_profile=Profil
+user_edit_profile=Daten ändern
+user_change_password=Passwort ändern
+user_logout=Abmelden
+
+addInvoiceForm_title=Rechnung hinzufügen
+addInvoiceForm_apartment=Wohnung
+addInvoiceForm_selectApartment=-- Wohnung auswählen --
+addInvoiceForm_issueDate=Ausstellungsdatum
+addInvoiceForm_save=Speichern
+addInvoiceForm_cancel=Abbrechen
+addInvoiceForm_formError=Wählen Sie eine Wohnung und ein Ausstellungsdatum.
+
+changePasswordForm_title=Passwort ändern
+changePasswordForm_save=Speichern
+changePasswordForm_oldPassword=Altes Passwort
+changePasswordForm_newPassword=Neues Passwort
+changePasswordForm_repeatNewPassword=Neues Passwort wiederholen
+changePasswordForm_formErrorRequired=Bitte füllen Sie alle Felder aus.
+changePasswordForm_formErrorInvalid=Das Passwort muss mindestens 12 Zeichen enthalten, darunter einen Großbuchstaben, einen Kleinbuchstaben, eine Zahl und ein Sonderzeichen.
+changePasswordForm_formErrorMatch=Die neuen Passwörter stimmen nicht überein.
+changePasswordForm_error=Fehler
+changePasswordForm_exception=Eine Ausnahme ist aufgetreten
+changePasswordForm_logoutMessage=Das Passwort wurde geändert. Sie werden abgemeldet.
+changePasswordForm_sessionExpired=Die Sitzung ist abgelaufen. Sie werden abgemeldet.
+
+invoicedetails_noData=Keine Daten zum Anzeigen vorhanden.
+invoicedetails_title=Rechnungsdetails
+invoicedetails_billingStartDate=Beginn des Abrechnungszeitraums
+invoicedetails_billingEndDate=Ende des Abrechnungszeitraums
+invoicedetails_issueDate=Ausstellungsdatum
+invoicedetails_rentAmount=Mietbetrag
+invoicedetails_totalMediaAmount=Medienbetrag
+invoicedetails_otherCharges=Sonstige Kosten
+invoicedetails_totalAmount=Gesamtsumme
+invoicedetails_paid=Bezahlt
+invoicedetails_confirmed=Bestätigt
+invoicedetails_flat=Pauschale
+invoicedetails_rentRatePerM2=Miete/m²
+invoicedetails_otherChargesPerM2=Sonstige Kosten/m²
+invoicedetails_readings=Ablesungen
+invoicedetails_flatRates=Pauschalbeträge
+invoicedetails_electricity=Strom
+invoicedetails_coldWater=Kaltwasser
+invoicedetails_hotWater=Warmwasser
+invoicedetails_heating=Heizung
+invoicedetails_address=Gebäudeadresse
+invoicedetails_apartmentNumber=Wohnungsnummer
+invoicedetails_apartmentFloor=Etage
+invoicedetails_apartmentArea=Wohnfläche
+invoicedetails_tenant=Mieter
+invoicedetails_manager=Verwalter
+invoicedetails_firstName=Vorname
+invoicedetails_lastName=Nachname
+invoicedetails_pesel=PESEL
+invoicedetails_email=E-Mail
+invoicedetails_telephone=Telefon
+invoicedetails_yes=Ja
+invoicedetails_no=Nein
+invoicedetails_back=Zurück
+
+invoiceEditForm_title=Rechnung bearbeiten
+invoiceEditForm_confirmed=Bestätigt
+invoiceEditForm_yes=Ja
+invoiceEditForm_no=Nein
+invoiceEditForm_save=Speichern
+invoiceEditForm_cancel=Abbrechen
+
+invoices_session_expired=Die Sitzung ist abgelaufen. Sie werden abgemeldet.
+invoices_buildings_load_error=Fehler beim Laden der Gebäude
+invoices_buildings_load_exception=Eine Ausnahme ist beim Laden der Gebäude aufgetreten
+invoices_no_buildings=Keine Gebäude zum Anzeigen vorhanden.
+invoices_no_apartments=Keine Wohnungen für die Rechnung vorhanden.
+invoices_delete_confirm=Möchten Sie diese Rechnung wirklich löschen?
+invoices_delete_error=Fehler beim Löschen der Rechnung
+invoices_delete_exception=Ein Fehler ist beim Löschen der Rechnung aufgetreten.
+invoices_save_error=Fehler beim Speichern der Rechnung
+invoices_save_exception=Ein Fehler ist beim Speichern der Rechnung aufgetreten.
+invoices_create_error=Fehler beim Erstellen der Rechnung
+invoices_create_exception=Ein Fehler ist beim Erstellen der Rechnung aufgetreten.
+invoices_load_error=Fehler beim Laden der Rechnung
+invoices_load_exception=Ein Fehler ist beim Laden der Rechnung aufgetreten.
+
+invoiceslist_title=Rechnungsliste
+invoiceslist_add=Rechnung hinzufügen
+invoiceslist_no_data=Keine Rechnungen zum Anzeigen vorhanden.
+invoiceslist_billing_start=Startdatum
+invoiceslist_billing_end=Enddatum
+invoiceslist_apartment_number=Wohnungsnummer
+invoiceslist_actions=Aktionen
+
+myInvoices_title=Meine Rechnungen
+myInvoices_billingStartDate=Beginn des Zeitraums
+myInvoices_billingEndDate=Ende des Zeitraums
+myInvoices_apartmentNumber=Wohnung
+myInvoices_paid=Bezahlt
+myInvoices_actions=Aktionen
+myInvoices_pay=Bezahlen
+myInvoices_download=Herunterladen
+myInvoices_show=Anzeigen
+myInvoices_back=Zurück
+myInvoices_loadError=Fehler beim Laden der Rechnungen
+myInvoices_loadDetailsError=Fehler beim Laden der Details
+myInvoices_invoicePaidSuccess=Rechnung bezahlt
+myInvoices_sessionExpired=Die Sitzung ist abgelaufen
+myInvoices_pdfDownloadError=Fehler beim Herunterladen des PDF
+
+myreadings_title=Ableseliste
+myreadings_no_data=Keine Ablesungen zum Anzeigen vorhanden.
+myreadings_billing_start=Startdatum
+myreadings_billing_end=Enddatum
+myreadings_address=Adresse
+myreadings_apartment_number=Wohnungsnummer
+myreadings_actions=Aktionen
+myreadings_show=Anzeigen
+myreadingsdetails_title=Ablesedetails
+myreadingsdetails_coldWaterValue=Kaltwasser (m³)
+myreadingsdetails_hotWaterValue=Warmwasser (m³)
+myreadingsdetails_heatingValue=Heizung (GJ)
+myreadingsdetails_electricityValue=Strom (kWh)
+myreadingsdetails_date=Ablesedatum
+myreadingsdetails_billingStartDate=Beginn des Abrechnungszeitraums
+myreadingsdetails_billingEndDate=Ende des Abrechnungszeitraums
+myreadingsdetails_apartment=Wohnung
+myreadingsdetails_back=Zurück
+
+profileEditForm_title=Profil bearbeiten
+profileEditForm_save=Speichern
+profileEditForm_firstName=Vorname
+profileEditForm_lastName=Nachname
+profileEditForm_telephone=Telefon
+profileEditForm_formErrorRequired=Bitte füllen Sie alle Felder aus.
+profileEditForm_error=Fehler
+profileEditForm_exception=Eine Ausnahme ist aufgetreten
+profileEditForm_logoutMessage=Das Profil wurde aktualisiert. Sie werden abgemeldet.
+profileEditForm_sessionExpired=Die Sitzung ist abgelaufen. Sie werden abgemeldet.
+
+profileview_user_load_error=Fehler beim Laden der Benutzerdaten
+profileview_user_load_exception=Eine Ausnahme ist beim Laden des Benutzers aufgetreten
+profileview_session_expired=Die Sitzung ist abgelaufen. Sie werden abgemeldet.
+profileview_no_data=Keine Daten zum Anzeigen vorhanden.
+profileview_title=Benutzerdetails
+profileview_first_name=Vorname
+profileview_last_name=Nachname
+profileview_email=E-Mail
+profileview_telephone=Telefon
+profileview_pesel=PESEL
+profileview_role=Rolle
+profileview_role_user=Mieter
+profileview_role_manager=Verwalter
+profileview_enabled=Status
+profileview_enabled_true=Aktiv
+profileview_enabled_false=Inaktiv
+profileview_apartment=Wohnung
+profileview_apartment_number=Wohnungsnummer
+profileview_area=Fläche
+profileview_floor=Etage
+profileview_address=Adresse
+profileview_managed_buildings=Verwaltete Gebäude
+profileview_no_managed_buildings=Keine verwalteten Gebäude
+profileview_no_apartment=Keine zugewiesene Wohnung
+profileview_back=Zurück
+
+error_invoice_already_exists=Rechnung für diese Wohnung und diesen Zeitraum existiert bereits
+error_manager_not_found=Verwalter nicht gefunden
+error_invoice_not_found=Rechnung nicht gefunden
+error_invoice_already_paid=Die Rechnung wurde bereits bezahlt
+invoice_created_success=Die Rechnung wurde erfolgreich erstellt
+invoice_updated_success=Die Rechnung wurde erfolgreich aktualisiert
+invoice_deleted_success=Die Rechnung wurde erfolgreich gelöscht
+invoice_paid_success=Die Rechnung wurde bezahlt
+
+invoice=Rechnung
+billingStartDate=Beginn des Abrechnungszeitraums
+billingEndDate=Ende des Abrechnungszeitraums
+issueDate=Ausstellungsdatum
+charges=Gebühren
+rentAmount=Mietbetrag
+otherCharges=Sonstige Kosten
+totalMediaAmount=Medienbetrag
+totalAmount=Gesamtsumme
+paid=Bezahlt
+confirmed=Bestätigt
+flat=Pauschale
+rentRatePerM2=Miete/m²
+otherChargesPerM2=Sonstige Kosten/m²
+readings=Ablesungen
+flatRates=Pauschalbeträge
+buildingData=Gebäude- und Wohnungsdaten
+electricity=Strom
+coldWater=Kaltwasser
+hotWater=Warmwasser
+heating=Heizung
+address=Gebäudeadresse
 apartmentNumber=Wohnungsnummer
-area=Fläche (m²)
-buildingId=Gebäude
-selectBuilding=-- Gebäude auswählen --
-apartmentDetailsTitle=Wohnungsdetails
-number=Wohnungsnummer
-buildingAddress=Gebäudeadresse
+apartmentFloor=Etage
+apartmentArea=Wohnfläche
 tenant=Mieter
-noTenant=Kein Mieter zugewiesen
-apartments_list_title=Wohnungsliste
-apartments_add=Wohnung hinzufügen
-apartments_no_data=Keine Wohnungen zur Anzeige vorhanden.
-apartments_address=Adresse
-apartments_number=Wohnungsnummer
-apartments_actions=Aktionen
-apartments_no_address=Keine Adresse
-apartments_show=Anzeigen
-apartments_edit=Bearbeiten
-apartments_delete=Löschen
+manager=Verwalter
+firstName=Vorname
+lastName=Nachname
+pesel=PESEL
+email=E-Mail
+telephone=Telefon
+yes=Ja
+no=Nein
